# kingdom-of-nin

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  build-and-run.sh  main.cc
.githooks/: pre-commit
.github/workflows/: build.yaml  ci.yml  release.yml
assets/: kingdom-of-nin.tiled-session
docs/: DDD.md  PRD.md
include/: camera.h  game.h
include/ecs/: position.h  registry.h
include/ecs/component/: buff_component.h  class_component.h  collision_component.h  component.h  equipment_component.h  graphic_component.h  health_component.h  inventory_component.h  level_component.h  loot_component.h  mana_component.h  mob_component.h  movement_component.h  npc_component.h  projectile_component.h  pushback_component.h  quest_log_component.h  shop_component.h  skill_bar_component.h  skill_tree_component.h  stats_component.h  transform_component.h
include/ecs/system/: graphic_system.h  movement_system.h  pushback_system.h  respawn_system.h  system.h
include/events/: event_bus.h  events.h
include/gameplay/: projectile_system.h
include/items/: item.h  item_database.h
include/mobs/: mob_database.h
include/quests/: quest.h  quest_database.h  quest_helpers.h  quest_system.h
include/skills/: skill.h  skill_database.h  skill_tree.h
include/ui/: buff_bar.h  character_stats.h  floating_text_system.h  inventory.h  minimap.h  mob_decoration_renderer.h  npc_dialog.h  quest_log.h  quest_marker_helpers.h  render_utils.h  shop_panel.h  skill_bar.h  skill_tree.h  text_utils.h
include/world/: coordinate.h  generator.h  map.h  region.h  tile.h
scripts/: check-build.sh  setup-hooks.sh
src/: CMakeLists.txt  camera.cc  game.cc
src/ecs/: CMakeLists.txt  registry.cc
src/ecs/system/: graphic_system.cc  movement_system.cc  pushback_system.cc  respawn_system.cc  system.cc
src/events/: CMakeLists.txt  event_bus.cc
src/gameplay/: projectile_system.cc
src/items/: CMakeLists.txt  item_database.cc
src/mobs/: CMakeLists.txt  mob_database.cc
src/quests/: CMakeLists.txt  quest_database.cc  quest_helpers.cc  quest_system.cc
src/skills/: CMakeLists.txt  skill_database.cc  skill_tree.cc
src/ui/: CMakeLists.txt  buff_bar.cc  character_stats.cc  floating_text_system.cc  inventory.cc  minimap.cc  mob_decoration_renderer.cc  npc_dialog.cc  quest_log.cc  quest_marker_helpers.cc  render_utils.cc  shop_panel.cc  skill_bar.cc  skill_tree.cc  text_utils.cc
src/world/: CMakeLists.txt  generator.cc  map.cc
tests/: CMakeLists.txt  character_stats_input_test.cc  item_database_generation_test.cc  mob_database_test.cc  quest_marker_helpers_test.cc  quest_system_test.cc
